--- a/client/src/Components/styles.css
+++ b/client/src/Components/styles.css
@@ -48,3 +48,52 @@
     border-radius: 20px;
     flex: 1;
 }
+
+.conversation-container{
+    display: grid;
+    grid-template-columns: 32px auto auto;
+    grid-template-rows: auto auto;
+    column-gap: 10px;
+    border-radius: 20px;
+    margin: 5px;
+    padding: 5px;
+}
+
+.cn-icon{
+    grid-area: 1/1/3/2;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 28px;
+    font-weight: bolder;
+    color: #fff;
+    background-color: #d9d9d9;
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    align-items: center;
+    justify-self: center;
+    padding: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cn-name{
+    grid-area: 1/2/2/3;
+    font-weight: bolder;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgba(0, 0, 0, 0.54);
+}
+
+.cn-lastMsg{
+    grid-area: 2/2/3/3;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgba(0, 0, 0, 0.54);
+    font-size: 0.90rem;
+}
+
+.cn-time{
+    grid-area: 2/2/4/4;
+    justify-self: flex-end;
+    color:rgba(0, 0, 0, 0.54);
+    font-size: 0.75rem;
+}
